[package]
name = "lum"
version = "0.1.0"
edition = "2021"
authors = ["Henrique Marques <allyson2308h@gmail.com>"]
repository = "https://github.com/henrique-marques-vsoft/lum"
description = "Linux Ubiquitous Marker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
